--- a/PomodoroUI/PomodoroUI/appsettings.json
+++ b/PomodoroUI/PomodoroUI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=PomodoroDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=PomodoroDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PomodoroUI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
