--- a/src/Pomodoro.Library/Pomodoro.Library.csproj
+++ b/src/Pomodoro.Library/Pomodoro.Library.csproj
@@ -26,6 +26,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="TimeZoneConverter" Version="6.1.0" />
+    <PackageReference Include="TimeZoneNames" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
