Fixed language stats change in pull request #130.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-/src/StudyPomo.UI/wwwroot/lib/* linguist-vendored
-!/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/* linguist-vendored=
+# Vendor all files in the lib directory
+/src/StudyPomo.UI/wwwroot/lib/** linguist-vendored
+
