--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./src/Pomodoro.UI
+      working-directory: ./src/StudyPomo.UI
     - name: Build
       run: dotnet publish --configuration Release --output ./Release --framework net8.0
-      working-directory: ./src/Pomodoro.UI
+      working-directory: ./src/StudyPomo.UI
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
@@ -33,7 +33,7 @@ jobs:
       run: npm install -g sass@1.65.1
 
     - name: Compile SCSS
-      run: sass ./src/Pomodoro.UI/Release/wwwroot/lib/bootstrap/scss/custom.scss ./src/Pomodoro.UI/Release/wwwroot/lib/bootstrap/scss/custom.css
+      run: sass ./src/StudyPomo.UI/Release/wwwroot/lib/bootstrap/scss/custom.scss ./src/StudyPomo.UI/Release/wwwroot/lib/bootstrap/scss/custom.css
       
     - name: Upload
       uses: appleboy/scp-action@master
@@ -42,7 +42,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        source: "./src/Pomodoro.UI/Release/"
+        source: "./src/StudyPomo.UI/Release/"
         strip_components: 4
         target: /var/www/studypomo
         overwrite: true
