--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --config src/fly.toml --dockerfile src/Dockerfile
+      - run: flyctl deploy --remote-only --config fly.toml --dockerfile Dockerfile
         working-directory: src
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
