--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,17 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: .NET
-
+name: Fly Deploy
 on:
-  release:
-    types: [created]
-
+  push:
+    branches:
+      - main
 jobs:
   deploy:
-
-    runs-on: ubuntu-24.04
-
+    name: Deploy app
+    runs-on: ubuntu-latest
+    concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-      working-directory: ./src/StudyPomo.UI
-    - name: Build
-      run: dotnet publish --configuration Release --output ./Release --framework net8.0
-      working-directory: ./src/StudyPomo.UI
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-
-    - name: Install Sass
-      run: npm install -g sass@1.65.1
-
-    - name: Compile SCSS
-      run: sass ./src/StudyPomo.UI/Release/wwwroot/lib/bootstrap/scss/custom.scss ./src/StudyPomo.UI/Release/wwwroot/lib/bootstrap/scss/custom.css
-      
-    - name: Upload
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        source: "./src/StudyPomo.UI/Release/"
-        strip_components: 4
-        target: /var/www/studypomo
-        overwrite: true
-        
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only --config fly.toml --dockerfile Dockerfile
+        working-directory: src
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
