--- a/src/StudyPomo.UI/appsettings.json
+++ b/src/StudyPomo.UI/appsettings.json
@@ -36,7 +36,7 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Enrich": [ "FromLogContext" ],
     "Properties": {
       "ApplicationName": "StudyPomo"
     }
